--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,20 @@
 name: main
 
 on:
+  workflow_dispatch:
+    inputs:
+      message:
+        description: "Message. What changes were made?"
+        required: false
+        default: "Updated Figma"
+      version:
+        description: "Which version of the Figma document to use?"
+        required: false
+        default: "" # Will use latest if not set
   push:
     branches:
       - "main"
-  workflow_dispatch:
+
 permissions:
   contents: read
   id-token: write
